syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package cryptohome.cryptorecovery;

// Recovery Id to be persisted on disk
message CryptoRecoveryIdContainer {
  optional int32 increment = 1;    // value to be added to the initial random
                                   // seed to generate recovery_id
  optional bytes seed = 2;         // Initial random seed
  optional bytes recovery_id = 3;  // persisted version of the recovery_id
}
